--- a/src/components/events/EventFilters.module.css
+++ b/src/components/events/EventFilters.module.css
@@ -349,10 +349,6 @@
     flex: 1 1 100%;
   }
 
-  .chipSection {
-    flex-direction: column;
-  }
-
   .formGroup {
     margin-bottom: 0;
   }
